gate conroller task
