# gate/src/main/java/ru/rksp/shanaurin/gate/StudentGateController.java
@@ -35,4 +35,16 @@ public class StudentGateController implements StudentGateApi {
 
         return ResponseEntity.status(201).body(gateResponse);
     }
+
+    @Override
+    public ResponseEntity<StudentGateResponse> getStudent(Long id) {
+        StudentDataResponse dataResponse = studentsFeignClient.getStudentDataByIdFromData(id);
+
+        StudentGateResponse gateResponse = new StudentGateResponse();
+        gateResponse.setId(dataResponse.getId());
+        gateResponse.setFullName(dataResponse.getFullName());
+        gateResponse.setPassport(dataResponse.getPassport());
+
+        return ResponseEntity.status(200).body(gateResponse);
+    }
 }
